# ring-sliding-window-attention

./: .flake8  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: implementation_details.md
ring_swa/: __init__.py
ring_swa/ops/: __init__.py  attn.py  comm.py  merge.py  wrap_flash.py
ring_swa/sliding_window/: __init__.py  nonvarlen.py  varlen.py
ring_swa/streaming_llm/: __init__.py  naive.py  nonvarlen.py  varlen.py
test/: test_local_slm.py  test_local_swa.py  test_ring_slm_nonvarlen.py  test_ring_slm_varlen.py  test_ring_swa_nonvarlen.py  test_ring_swa_varlen.py
